--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-
-	<meta charset="utf-8">
-	<!-- <base href="/"> -->
-
-	<title>AquaGradus Prima Tora</title>
-	<meta name="description" content="">
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
-	<!-- Template Basic Images Start -->
-	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<!-- Template Basic Images End -->
-	
-	<!-- Custom Browsers Color Start -->
-	<meta name="theme-color" content="#000">
-	<!-- Custom Browsers Color End -->
-
-	<link rel="stylesheet" href="css/main.min.css">
-
-</head>
-
-<body>
-
-	<h1>AquaGradus Prima Tora</h1>
-
-	<script src="js/scripts.min.js"></script>
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<!-- <base href="/"> -->
+		<title>AquaGradus Prima Tora</title>
+		<meta name="description" content="">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		
+		<!-- Template Basic Images Start -->
+		<meta property="og:image" content="path/to/image.jpg">
+		<link rel="icon" href="img/favicon/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+		<!-- Template Basic Images End -->
+		
+		<!-- Custom Browsers Color Start -->
+		<meta name="theme-color" content="#fff">
+		<!-- Custom Browsers Color End -->
+		<link rel="stylesheet" href="css/main.min.css">
+	</head>
+	<body>
+		
+		<header>
+			<div class="nav-sticky">
+				<div class="row navbar-desctop">
+					<div class="col-md-2 header-logo">
+						<a href="#"><img src="img/Logo/AquaGradusEng1-1.png" alt="aquagradus лого" class="img-responsive"></a>
+					</div>
+					<nav class="col-md-7 header-nav">
+						<ul>
+							<li><a href="#">Характеристики</a></li>
+							<li><a href="#">Продукция</a></li>
+							<li><a href="#">Галерея</a></li>
+							<li><a href="#">Отзывы</a></li>
+							<li><a href="#">Как мы работаем?</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+					</nav>
+					<div class="col-md-3 header-call">
+						<a href="#" class="btn btn-orange">заказать звонок</a>
+						<div class="header-phones">
+							<p>+38 (050) 394-25-81</p>
+							<p>+38 (067) 261-16-48</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row header-wellcome">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5 one">
+							1
+						</div>
+						<div class="col-md-2 two">
+							1
+						</div>
+						<div class="col-md-5 three">
+							1
+						</div>
+						
+					</div>
+				</div>
+			</div>
+		</header>
+		<script src="js/scripts.min.js"></script>
+	</body>
 </html>
