added some blocks

--- a/app/index.html
+++ b/app/index.html
@@ -49,20 +49,195 @@
 			<div class="row header-wellcome">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-5 one">
-							1
+						<div class="col-md-5 plus-box">
+							<h1 class="h1">Самогонный аппарат AquaGradus Прима Тора</h1>
+							<p class="utp-header">Получайте до 7 литров беспохмельных напитков на своей кухне всего за 1 час</p>
+							<div class="plus-block">
+								<p class="list-header">Преимущества:</p>
+								<ul>
+									<li>
+										<i></i>
+										<p>Холодильник димрота, более мощный</p>
+									</li>
+									<li>
+										<i></i>
+										<p>Легок в управлении</p>
+									</li>
+									<li>
+										<i></i>
+										<p>Можно перегонять хоть на костре</p>
+									</li>
+									<li>
+										<i></i>
+										<p>Ректификация (96 градусов) в разы дешевле</p>
+									</li>
+									<li>
+										<i></i>
+										<p>Менее грамоздкая конструкция при ректификации</p>
+									</li>
+								</ul>
+							</div>
 						</div>
-						<div class="col-md-2 two">
-							1
+						<div class="col-md-2 device-box">
+							<img src="img/header/device.png" alt="Самогонный аппарат AquaGradus Прима Тора" class="img-responsive img-device">
+							<img src="img/header/warranty.png" alt="AquaGradus Прима Тора 5 лет гарантии" class="img-responsive img-warranty">
 						</div>
-						<div class="col-md-5 three">
-							1
+						<div class="col-md-5 form-box">
+							<form class="form-header" method="post">
+								<p class="cta">
+									Заполните форму чтобы<br><span>получить скидку 700 грн!</span>
+								</p>
+								<ul class="price">
+									<li class="price-item">
+										25л <span class="new-price"> 5 950 грн</span> <span class="old-price"> 5 950 грн</span>
+									</li>
+									<li class="price-item">
+										35л <span class="new-price"> 5 950 грн</span> <span class="old-price"> 5 950 грн</span>
+									</li>
+									<li class="price-item">
+										50л <span class="new-price"> 5 950 грн</span> <span class="old-price"> 5 950 грн</span>
+									</li>
+								</ul>
+								<div class="form-group">
+									<!-- hidden -->
+									<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Первый экран">
+									<input type="hidden" name="DATA[SOURCE_ID]" value="Веб-сайт Прима">
+									<!-- hidden -->
+									<input type="text" class="form-item" name="DATA[NAME]" required placeholder="Ваше имя">
+									<input type="tel" class="form-item" name="DATA[PHONE_MOBILE]" required placeholder="Ваш телефон">
+									<button type="submit" class="btn btn-green header-btn">получить скидку</button>
+								</div>
+							</form>
 						</div>
 						
 					</div>
 				</div>
 			</div>
 		</header>
+		<section class="tips">
+			<div class="container">
+				<div class="row">
+					<div class="tips-container">
+						<img src="img/tips/factory.png" alt="Самогонный аппарат AquaGradus Прима Тора" class="img-responsive">
+						<p>Фабричное производство открытого типа</p>
+					</div>
+					<div class="tips-container">
+						<img src="img/tips/plant.png" alt="Самогонный аппарат AquaGradus Прима Тора" class="img-responsive">
+						<p>Постоянное пополнение ассортимента</p>
+					</div>
+					<div class="tips-container">
+						<img src="img/tips/assortment.png" alt="Самогонный аппарат AquaGradus Прима Тора" class="img-responsive">
+						<p>Постпродажная поддержка</p>
+					</div>
+					<div class="tips-container">
+						<img src="img/tips/discount.png" alt="Самогонный аппарат AquaGradus Прима Тора" class="img-responsive">
+						<p>Постпродажная поддержка</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="video-plant">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 video">
+						<div class="video-container">
+							<div class="embed-responsive embed-responsive-16by9">
+								<div id="video-placeholder"></div>
+							</div>
+							<div id="plh" class="plh-video embed-responsive embed-responsive-16by9"></div>
+							<div id="play" class="btn-video"></div>
+						</div>
+					</div>
+					<div class="col-md-4 text">
+						<h2 class="h2">Видео - экскурсия по фабрике AquaGradus™</h2>
+						<p class="cta">Посмотрите короткое видео и узнайте как выглядит производство изнутри</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="specification">
+			<div class="container">
+				<div class="row">
+					<h2 class="h2">Характеристики и размеры AquaGradus™ Прима Тора</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-3 spec-img">
+						<div class="tab-img">
+							<img src="img/specification/25l-tora.jpg" alt="AquaGradus™ Прима Тора 25 литров" class="img-responsive">
+						</div>
+					</div>
+					<div class="col-md-5 spaec-details">
+						<div class="tabs">
+							<div class="tab">
+								<a href="#" class="tablink">25 литров</a>
+							</div>
+							<div class="tab">
+								<a href="#" class="tablink">35 литров</a>
+							</div>
+							<div class="tab">
+								<a href="#" class="tablink">50 литров</a>
+							</div>
+						</div>
+						<p class="title">Детальные характеристики:</p>
+						<ul>
+							<li>
+								<div class="label">Марка стали</div>
+								<div class="separator"></div>
+								<div class="valey">AISI 304Ti (медицинская)</div>
+							</li>
+							<li>
+								<div class="label">Диаметр колонны</div>
+								<div class="separator"></div>
+								<div class="valey">51 мм (Фланец 91мм")</div>
+							</li>
+							<li>
+								<div class="label">Диаметр трубок охладителя</div>
+								<div class="separator"></div>
+								<div class="valey">7 шт. по 8 мм</div>
+							</li>
+							<li>
+								<div class="label">Скорость перегонки</div>
+								<div class="separator"></div>
+								<div class="valey">7 л/час</div>
+							</li>
+							<li>
+								<div class="label">Монтаж охлаждения</div>
+								<div class="separator"></div>
+								<div class="valey">Муфта 1/4"</div>
+							</li>
+							<li>
+								<div class="label">Емкость</div>
+								<div class="separator"></div>
+								<div class="valey">Усиленная (ребра жесткости)</div>
+							</li>
+							<li>
+								<div class="label">Наполнитель</div>
+								<div class="separator"></div>
+								<div class="valey">Насадка Панченкова (5 м)</div>
+							</li>
+							<li>
+								<div class="label">Толщина крышка / стенка / дно</div>
+								<div class="separator"></div>
+								<div class="valey">1,2 мм /1 мм / 1,5 мм</div>
+							</li>
+							<li>
+								<div class="label">Для плит</div>
+								<div class="separator"></div>
+								<div class="valey">электр., газ, керамич., индукц.</div>
+							</li>
+							<li>
+								<div class="label">Вес</div>
+								<div class="separator"></div>
+								<div class="valey">9 кг</div>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md-4 spaec-tips"></div>
+				</div>
+			</div>
+		</section>
 		<script src="js/scripts.min.js"></script>
+		<script src="https://www.youtube.com/iframe_api"></script>
+		<script src="libs/videoAPI/video.js"></script>
 	</body>
 </html>
