--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,6 @@
 								</div>
 							</form>
 						</div>
-						
 					</div>
 				</div>
 			</div>
@@ -162,77 +161,254 @@
 				</div>
 				<div class="row">
 					<div class="col-md-3 spec-img">
-						<div class="tab-img">
+						<div class="tab-img active">
 							<img src="img/specification/25l-tora.jpg" alt="AquaGradus™ Прима Тора 25 литров" class="img-responsive">
+						</div>
+						<div class="tab-img">
+							<img src="img/specification/35l-tora.jpg" alt="AquaGradus™ Прима Тора 35 литров" class="img-responsive">
+						</div>
+						<div class="tab-img">
+							<img src="img/specification/50l-tora.jpg" alt="AquaGradus™ Прима Тора 50 литров" class="img-responsive">
 						</div>
 					</div>
 					<div class="col-md-5 spaec-details">
-						<div class="tabs">
-							<div class="tab">
-								<a href="#" class="tablink">25 литров</a>
+						<div class="spaec-details-box">
+							<div class="tabs">
+								<p class="title">Выберите нужный объем бака</p>
+								<div class="tabs-container">
+									<div class="tab active">
+										<a href="#" class="tablink">25 литров</a>
+									</div>
+									<div class="tab">
+										<a href="#" class="tablink">35 литров</a>
+									</div>
+									<div class="tab">
+										<a href="#" class="tablink">50 литров</a>
+									</div>
+								</div>
 							</div>
-							<div class="tab">
-								<a href="#" class="tablink">35 литров</a>
-							</div>
-							<div class="tab">
-								<a href="#" class="tablink">50 литров</a>
+							<p class="title">Детальные характеристики:</p>
+							<ul>
+								<li>
+									<div class="label">Марка стали</div>
+									<div class="separator"></div>
+									<div class="valey">AISI 304Ti (медицинская)</div>
+								</li>
+								<li>
+									<div class="label">Диаметр колонны</div>
+									<div class="separator"></div>
+									<div class="valey">51 мм (Фланец 91мм")</div>
+								</li>
+								<li>
+									<div class="label">Диаметр трубок охладителя</div>
+									<div class="separator"></div>
+									<div class="valey">7 шт. по 8 мм</div>
+								</li>
+								<li>
+									<div class="label">Скорость перегонки</div>
+									<div class="separator"></div>
+									<div class="valey">7 л/час</div>
+								</li>
+								<li>
+									<div class="label">Монтаж охлаждения</div>
+									<div class="separator"></div>
+									<div class="valey">Муфта 1/4"</div>
+								</li>
+								<li>
+									<div class="label">Емкость</div>
+									<div class="separator"></div>
+									<div class="valey">Усиленная (ребра жесткости)</div>
+								</li>
+								<li>
+									<div class="label">Наполнитель</div>
+									<div class="separator"></div>
+									<div class="valey">Насадка Панченкова (5 м)</div>
+								</li>
+								<li>
+									<div class="label">Толщина крышка / стенка / дно</div>
+									<div class="separator"></div>
+									<div class="valey">1,2 мм /1 мм / 1,5 мм</div>
+								</li>
+								<li>
+									<div class="label">Для плит</div>
+									<div class="separator"></div>
+									<div class="valey">электр., газ, керамич., индукц.</div>
+								</li>
+								<li>
+									<div class="label">Вес</div>
+									<div class="separator"></div>
+									<div class="valey tab-kg active">9 кг</div>
+									<div class="valey tab-kg">11 кг</div>
+									<div class="valey tab-kg">13 кг</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-4 spaec-tips">
+						<div class="tips-box">
+							<ul>
+								<li>
+									<i></i>
+									<p>100% герметичность</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Нержавеющая сталь AISI 304</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Легкость в сборке</p>
+								</li>
+							</ul>
+						</div>
+						<div class="product-box">
+							<p class="title">Сколько продукта<br>получится за 1 перегонку?</p>
+							<ul class="tab-product active">
+								<li>
+									<div class="label">Заливаем в бак</div>
+									<div class="separator"></div>
+									<div class="tab-speac">20 л</div>
+								</li>
+								<li>
+									<div class="label">Крепость браги</div>
+									<div class="separator"></div>
+									<div class="tab-speac">10.0%</div>
+								</li>
+								<li>
+									<div class="label">Чистого спирта в браге</div>
+									<div class="separator"></div>
+									<div class="tab-speac">2 л</div>
+								</li>
+								<li>
+									<div class="label">40-градусного напитка,<br>пригодного для употребления</div>
+									<div class="separator"></div>
+									<div class="tab-speac">5.0 л</div>
+								</li>
+							</ul>
+							<ul class="tab-product">
+								<li>
+									<div class="label">Заливаем в бак</div>
+									<div class="separator"></div>
+									<div class="tab-speac">30 л</div>
+								</li>
+								<li>
+									<div class="label">Крепость браги</div>
+									<div class="separator"></div>
+									<div class="tab-speac">10.0%</div>
+								</li>
+								<li>
+									<div class="label">Чистого спирта в браге</div>
+									<div class="separator"></div>
+									<div class="tab-speac">3 л</div>
+								</li>
+								<li>
+									<div class="label">40-градусного напитка,<br>пригодного для употребления</div>
+									<div class="separator"></div>
+									<div class="tab-speac">7.5 л</div>
+								</li>
+							</ul>
+							<ul class="tab-product">
+								<li>
+									<div class="label">Заливаем в бак</div>
+									<div class="separator"></div>
+									<div class="tab-speac">38 л</div>
+								</li>
+								<li>
+									<div class="label">Крепость браги</div>
+									<div class="separator"></div>
+									<div class="tab-speac">10.0%</div>
+								</li>
+								<li>
+									<div class="label">Чистого спирта в браге</div>
+									<div class="separator"></div>
+									<div class="tab-speac">3.8 л</div>
+								</li>
+								<li>
+									<div class="label">40-градусного напитка,<br>пригодного для употребления</div>
+									<div class="separator"></div>
+									<div class="tab-speac">9.5 л</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="akciya">
+			<div class="container">
+				<div class="row akciya-box">
+					<h2 class="col-12 h2">Закажите любой аппарат AquaGradus™ Прима Тора<br>и получите в подарок:</h2>
+					<div class="akciya-present">
+						<div class="akciya-img">
+							<img src="img/akciya/nasadka.png" alt="Насадка панчекова" class="img-responsive">
+							<p class="title">Насадка Панченкова 7 м</p>
+						</div>
+						<div class="akciya-img">
+							<img src="img/akciya/delux.png" alt="Охлаждение делюкс" class="img-responsive">
+							<p class="title">Охлаждение делюкс</p>
+						</div>
+						<div class="akciya-timer">
+							<p class="timer-title">До конца акции осталось:</p>
+							<div class="timer">
+								<div class="timer-points">
+									<div id="days">5</div>
+									<div class="timer-text">Дней</div>
+								</div>
+								<div class="delimiter">:</div>
+								<div class="timer-points">
+									<div id="hours">10</div>
+									<div class="timer-text">Часов</div>
+								</div>
+								<div class="delimiter">:</div>
+								<div class="timer-points">
+									<div id="minutes">51</div>
+									<div class="timer-text">Минут</div>
+								</div>
 							</div>
 						</div>
-						<p class="title">Детальные характеристики:</p>
-						<ul>
-							<li>
-								<div class="label">Марка стали</div>
-								<div class="separator"></div>
-								<div class="valey">AISI 304Ti (медицинская)</div>
-							</li>
-							<li>
-								<div class="label">Диаметр колонны</div>
-								<div class="separator"></div>
-								<div class="valey">51 мм (Фланец 91мм")</div>
-							</li>
-							<li>
-								<div class="label">Диаметр трубок охладителя</div>
-								<div class="separator"></div>
-								<div class="valey">7 шт. по 8 мм</div>
-							</li>
-							<li>
-								<div class="label">Скорость перегонки</div>
-								<div class="separator"></div>
-								<div class="valey">7 л/час</div>
-							</li>
-							<li>
-								<div class="label">Монтаж охлаждения</div>
-								<div class="separator"></div>
-								<div class="valey">Муфта 1/4"</div>
-							</li>
-							<li>
-								<div class="label">Емкость</div>
-								<div class="separator"></div>
-								<div class="valey">Усиленная (ребра жесткости)</div>
-							</li>
-							<li>
-								<div class="label">Наполнитель</div>
-								<div class="separator"></div>
-								<div class="valey">Насадка Панченкова (5 м)</div>
-							</li>
-							<li>
-								<div class="label">Толщина крышка / стенка / дно</div>
-								<div class="separator"></div>
-								<div class="valey">1,2 мм /1 мм / 1,5 мм</div>
-							</li>
-							<li>
-								<div class="label">Для плит</div>
-								<div class="separator"></div>
-								<div class="valey">электр., газ, керамич., индукц.</div>
-							</li>
-							<li>
-								<div class="label">Вес</div>
-								<div class="separator"></div>
-								<div class="valey">9 кг</div>
-							</li>
-						</ul>
 					</div>
-					<div class="col-md-4 spaec-tips"></div>
+					<form method="post" class="col-12 akciya-form">
+						<!-- hidden -->
+						<input type="hidden" name="DATA[TITLE]" value="Новый лид: Аппарат - Прима; Форма - Первый экран">
+						<input type="hidden" name="DATA[SOURCE_ID]" value="Веб-сайт Прима">
+						<!-- hidden -->
+						<input type="text" class="form-item" name="DATA[NAME]" required placeholder="Ваше имя">
+						<input type="tel" class="form-item" name="DATA[PHONE_MOBILE]" required placeholder="Ваш телефон">
+						<button type="submit" class="btn btn-orange">получить подарок</button>
+					</form>
+				</div>
+			</div>
+		</section>
+		<section class="video-instructions">
+			<div class="container">
+				<div class="row">
+					<h2 class="h2">AquaGradus™ Видео-инструкции</h2>
+					<div class="row">
+						<div class="col-md-4">
+							<div class="video-container">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RysVHwwo_Ek"></iframe>
+								</div>
+							</div>
+							<p class="title">Что вы получаете при заказе? Видео- распаковка аппарата</p>
+						</div>
+						<div class="col-md-4">
+							<div class="video-container">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RysVHwwo_Ek"></iframe>
+								</div>
+							</div>
+							<p class="title">Подготовка аппарата к работе и первая перегонка</p>
+						</div>
+						<div class="col-md-4">
+							<div class="video-container">
+								<div class="embed-responsive embed-responsive-16by9">
+									<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RysVHwwo_Ek"></iframe>
+								</div>
+							</div>
+							<p class="title">2я перегонка, получение высокоградусного чистейшего дистиллята без особых усилий</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
