--- a/app/index.html
+++ b/app/index.html
@@ -412,6 +412,152 @@
 				</div>
 			</div>
 		</section>
+		<section class="catalog">
+			<div class="container">
+				<div class="row">
+					<h2 class="h2">Успейте заказать AquaGradus™ Прима Тора по супер цене!</h2>
+					<div class="catalog-box">
+						<div class="col-md-3 cat-img-container">
+							<div class="cat-img active">
+								<img src="img/catalog/25l-size.jpg" alt="AquaGradus™ Прима Тора 25 литров" class="img-responsive">
+							</div>
+							<div class="cat-img">
+								<img src="img/catalog/35l-size.jpg" alt="AquaGradus™ Прима Тора 35 литров" class="img-responsive">
+							</div>
+							<div class="cat-img">
+								<img src="img/catalog/50l-size.jpg" alt="AquaGradus™ Прима Тора 50 литров" class="img-responsive">
+							</div>
+						</div>
+						<div class="col-md-5 cat-choise">
+							<div class="cat-choise-complect">
+								<div class="tabs">
+									<p class="title">Выберите нужный объем бака</p>
+									<div class="cat-tabs-container">
+										<div class="cat-tab active">
+											<a href="#" class="tablink">25 литров</a>
+										</div>
+										<div class="cat-tab">
+											<a href="#" class="tablink">35 литров</a>
+										</div>
+										<div class="cat-tab">
+											<a href="#" class="tablink">50 литров</a>
+										</div>
+									</div>
+								</div>
+								<div class="cat-price">
+									<ul class="price">
+										<p>Цена:</p>
+										<li class="price-item active">
+											<div class="cat-price-container">
+												<span class="new-price">3 690₴</span> <span class="old-price">4 290₴ </span>
+											</div>
+											<button class="btn btn-orange btn-cat">купить аппарат</button>
+										</li>
+										<li class="price-item">
+											<div class="cat-price-container">
+												<span class="new-price">3 690₴</span> <span class="old-price">4 290₴ </span>
+											</div>
+											<button class="btn btn-orange btn-cat">купить аппарат</button>
+										</li>
+										<li class="price-item">
+											<div class="cat-price-container">
+												<span class="new-price">3 690₴</span> <span class="old-price">4 290₴ </span>
+											</div>
+											<button class="btn btn-orange btn-cat">купить аппарат</button>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<p class="catalog-title">Вы можете приобрести отдельно:</p>
+							<div class="cat-choise-single">
+								<div class="cat-tank-container">
+									<p class="tank-title">Бак AquaGradus™</p>
+									<div class="cat-tank-tabs">
+										<div class="cat-tank-img">
+											<div class="tank-img active">
+												<img src="img/catalog/25l-size.png" alt="Емкость AquaGradus™ 25 литров" class="img-responsive">
+											</div>
+											<div class="tank-img">
+												<img src="img/catalog/35l-size.png" alt="Емкость AquaGradus™ 35 литров" class="img-responsive">
+											</div>
+											<div class="tank-img">
+												<img src="img/catalog/50l-size.png" alt="Емкость AquaGradus™ 50 литров" class="img-responsive">
+											</div>
+										</div>
+										<div class="cat-tank-price">
+											<div class="price-tank active">
+												<p class="price"><span>Цена:</span> 1000грн</p>
+												<button class="btn btn-orange btn-tank">купить</button>
+											</div>
+											<div class="price-tank">
+												<p class="price"><span>Цена:</span> 1000грн</p>
+												<button class="btn btn-orange btn-tank">купить</button>
+											</div>
+											<div class="price-tank">
+												<p class="price"><span>Цена:</span> 1000грн</p>
+												<button class="btn btn-orange btn-tank">купить</button>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="cat-tank-tab">
+									<div class="tab active">
+										<a href="#" class="tablink">25 л</a>
+									</div>
+									<div class="tab">
+										<a href="#" class="tablink">35 л</a>
+									</div>
+									<div class="tab">
+										<a href="#" class="tablink">50 л</a>
+									</div>
+								</div>
+								<div class="cat-col-container">
+									<p class="col-title">Колонна AquaGradus™</p>
+									<div class="col-box">
+										<div class="col-img">
+											<img src="img/catalog/col.png" alt="Колонна AquaGradus™ Прима Тора" class="img-responsive">
+										</div>
+										<div class="price-col">
+											<p class="price"><span>Цена:</span> 1000грн</p>
+											<button class="btn btn-orange btn-col">купить</button>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 cat-complect">
+							<p class="title">Комплектация</p>
+							<ul>
+								<li>
+									<i></i>
+									<p>Армированный шланг ПВХ 5м</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Цифровой термометр в колонну</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Руководство пользователя</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Переходник на кран</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Цифровой термометр в бак</p>
+								</li>
+								<li>
+									<i></i>
+									<p>Заглушка под тэн (покупается отдельно)</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<script src="js/scripts.min.js"></script>
 		<script src="https://www.youtube.com/iframe_api"></script>
 		<script src="libs/videoAPI/video.js"></script>
